--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     
     <body>
         <div class="container">
-            <audio id="myAudio" src="/305.mp3" type="audio/mp3" autoplay loop>
+            <audio id="myAudio" type="audio/ogg" src="/Shawn-Mendes-305-_Lyric-Video_.ogg" autoplay loop></audio> 
+<!--             <audio id="myAudio" src="/305.mp3" type="audio/mp3" autoplay loop> -->
                 <!-- <embed id="myAudio" src="/305.mp3" type="audio/mp3" autoplay="autoplay" loop="loop"> -->
             </audio>
             
